--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,13 +1,13 @@
 ARG NODE_VERSION=18
 
 FROM node:${NODE_VERSION}-bullseye-slim AS base
-WORKDIR /usr/src/app
-# EXPOSE 3000
 RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
 
 ###################
 # BUILD FOR LOCAL DEVELOPMENT
 ###################
+
+WORKDIR /usr/src/app
 
 FROM base AS development
 
@@ -16,8 +16,8 @@ FROM base AS development
 # Copying this first prevents re-running npm install on every code change.
 COPY --chown=node:node package*.json ./
 
-# Install app dependencies using the `npm ci` command instead of `npm install`
-RUN npm ci && npm cache clean --force
+# Install ALL app dependencies, including 'devDependencies'
+RUN npm ci
 
 # Bundle app source
 COPY --chown=node:node . .
@@ -29,7 +29,9 @@ USER node
 # BUILD FOR PRODUCTION
 ###################
 
-FROM base AS build
+FROM development AS build
+
+#WORKDIR /usr/src/app
 
 COPY --chown=node:node package*.json ./
 
@@ -38,15 +40,16 @@ COPY --chown=node:node --from=development /usr/src/app/node_modules ./node_modul
 
 COPY --chown=node:node . .
 
+# the 'npm ci' cmd requires root access
+USER root
+
 # Run the build command which creates the production bundle
 RUN npm run build
 
 # Set NODE_ENV environment variable
 ENV NODE_ENV production
-
 # Running `npm ci` removes the existing node_modules directory and passing in --only=production ensures that only the production dependencies are installed. This ensures that the node_modules directory is AS optimized AS possible
 RUN npm ci --only=production && npm cache clean --force
-
 USER node
 
 ###################
@@ -58,7 +61,7 @@ FROM base AS production
 # Copy the bundled code from the build stage to the production image
 COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
 COPY --chown=node:node --from=build /usr/src/app/dist ./dist
+COPY --chown=node:node --from=build /usr/src/app/package*.json ./
 
 # Start the server using the production build
 CMD [ "node", "dist/main.js" ]
-
