--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "auth"]
 	path = auth
 	url = https://github.com/Lephat902/tutorify-be-auth
+[submodule "nginx"]
+	path = nginx
+	url = https://github.com/Lephat902/tutorify-be-nginx.git
