--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -32,3 +32,17 @@ services:
     volumes:
       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+
+  nginx:
+    build:
+      dockerfile: ./nginx/build/Dockerfile
+    command: [/bin/bash, ./nginx/build/command.sh]
+    ports:
+      - "443:443"
+      - "80:80"
+    volumes:
+      - ./nginx/conf:/etc/nginx/conf.d
+      - .:/usr/src/app
+    working_dir: /usr/src/app
+    depends_on:
+      - api-gateway
