Add mailer service

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "nginx"]
 	path = nginx
 	url = https://github.com/Lephat902/tutorify-be-nginx.git
+[submodule "mailer"]
+	path = mailer
+	url = https://github.com/Lephat902/tutorify-be-mailer.git
