--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "mailer"]
 	path = mailer
 	url = https://github.com/Lephat902/tutorify-be-mailer.git
+[submodule "verification-token"]
+	path = verification-token
+	url = https://github.com/Lephat902/tutorify-be-verification-token.git
