--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -33,6 +33,16 @@ services:
     volumes:
        - ./mailer:/usr/src/app
 
+  verification-token:
+    build:
+      context: ./verification-token
+      target: development
+    command: npm run start:dev
+    environment:
+      NODE_ENV: development
+    volumes:
+       - ./verification-token:/usr/src/app
+
   rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: 'rabbitmq'
