--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   api-gateway:
+    image: tutorify-be-api-gateway:prod
     restart: on-failure
     ports:
       - "3000:3000"
@@ -17,6 +18,7 @@ services:
 
 
   auth:
+    image: tutorify-be-auth:prod
     restart: on-failure
     build:
       context: ./auth
@@ -30,6 +32,7 @@ services:
 
 
   mailer:
+    image: tutorify-be-mailer:prod
     restart: on-failure
     build:
       context: ./mailer
@@ -43,6 +46,7 @@ services:
 
 
   verification-token:
+    image: tutorify-be-verification-token:prod
     restart: on-failure
     build:
       context: ./verification-token
