Make it able to host the whole app to azure

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -51,6 +51,19 @@ services:
       - ./verification-token:/usr/src/app
       - /usr/src/app/node_modules
 
+  feedback:
+    image: tutorify-be-feedback:dev
+    restart: on-failure
+    build:
+      context: ./feedback
+      target: development
+    environment:
+      NODE_ENV: development
+    volumes:
+      - ./feedback:/usr/src/app
+      - /usr/src/app/node_modules
+
+
   rabbitmq:
     restart: on-failure
     image: rabbitmq:3-management-alpine
