--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "files"]
 	path = files
 	url = https://github.com/HungPham-Canh/files
+[submodule "class-and-category"]
+	path = class-and-category
+	url = https://github.com/Lephat902/tutorify-be-class-and-category
