--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -14,6 +14,8 @@ services:
     volumes:
       - ./api-gateway:/usr/src/app
       - /usr/src/app/node_modules
+    depends_on:
+      - rabbitmq
 
   auth:
     image: tutorify-be-auth:dev
@@ -73,6 +75,18 @@ services:
       NODE_ENV: development
     volumes:
       - ./files:/usr/src/app
+      - /usr/src/app/node_modules
+
+  class-and-category:
+    image: tutorify-be-class-and-category:dev
+    restart: on-failure
+    build:
+      context: ./class-and-category
+      target: development
+    environment:
+      NODE_ENV: development
+    volumes:
+      - ./class-and-category:/usr/src/app
       - /usr/src/app/node_modules
 
 
