--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -87,6 +87,7 @@ services:
       NODE_ENV: development
     volumes:
       - ./class-and-category:/usr/src/app
+      - ./shared:/usr/src/shared
       - /usr/src/app/node_modules
 
 
