--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -13,6 +13,7 @@ services:
       NODE_ENV: development
     volumes:
       - ./api-gateway:/usr/src/app
+      - ./shared:/usr/src/shared
       - /usr/src/app/node_modules
     depends_on:
       - rabbitmq
