--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "class-and-category"]
 	path = class-and-category
 	url = https://github.com/Lephat902/tutorify-be-class-and-category
+[submodule "tutor-apply-for-class"]
+	path = tutor-apply-for-class
+	url = https://github.com/Lephat902/tutorify-be-tutor-apply-for-class.git
