--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -29,6 +29,7 @@ services:
       NODE_ENV: development
     volumes:
       - ./auth:/usr/src/app
+      - ./shared:/usr/src/shared
       - /usr/src/app/node_modules
 
 
