--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -104,6 +104,17 @@ services:
     env_file: ./student-favorite-tutor/.env.example
 
 
+  tutor-proficient-in-class-category:
+    image: tutorify.azurecr.io/tutorify-be-tutor-proficient-in-class-category:prod
+    restart: on-failure
+    build:
+      context: ./tutor-proficient-in-class-category
+      target: production
+    environment:
+      NODE_ENV: production
+    env_file: ./tutor-proficient-in-class-category/.env.example
+
+
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
