--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -69,6 +69,7 @@ services:
       NODE_ENV: development
     volumes:
       - ./feedback:/usr/src/app
+      - ./shared:/usr/src/shared
       - /usr/src/app/node_modules
 
 
