--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "tutor-proficient-in-class-category"]
 	path = tutor-proficient-in-class-category
 	url = https://github.com/Lephat902/tutorify-be-tutor-proficiencies
+[submodule "tutor-query"]
+	path = tutor-query
+	url = https://github.com/Lephat902/tutorify-be-tutor-query
