--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -115,6 +115,17 @@ services:
     env_file: ./tutor-proficient-in-class-category/.env.example
 
 
+  tutor-query:
+    image: tutorify.azurecr.io/tutorify-be-tutor-query:prod
+    restart: on-failure
+    build:
+      context: ./tutor-query
+      target: production
+    environment:
+      NODE_ENV: production
+    env_file: ./tutor-query/.env.example
+
+
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
