--- a/shared/package.json
+++ b/shared/package.json
@@ -5,16 +5,17 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "rimraf dist && tsc",
-      "prepublish": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^10.3.3",
-    "@nestjs/microservices": "^10.3.3",
-    "@types/node": "^20.11.19",
+    "@nestjs/microservices": "^10.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   }
