--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -125,6 +125,15 @@ services:
       NODE_ENV: production
     env_file: ./tutor-query/.env.example
 
+  address:
+    image: tutorify.azurecr.io/tutorify-be-address:prod
+    restart: on-failure
+    build:
+      context: ./address
+      target: production
+    environment:
+      NODE_ENV: production
+    env_file: ./address/.env.example
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
