Add class-session service

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "address"]
 	path = address
 	url = https://github.com/HungPham-Canh/tutorify-be-address.git
+[submodule "class-session"]
+	path = class-session
+	url = https://github.com/Lephat902/tutorify-be-class-session.git
