--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -153,6 +153,16 @@ services:
       NODE_ENV: production
     env_file: ./report/.env.example
 
+  user-preferences:
+    image: registry.digitalocean.com/tutorify-registry/tutorify-be-user-preferences:prod
+    restart: on-failure
+    build:
+      context: ./user-preferences
+      target: production
+    environment:
+      NODE_ENV: production
+    env_file: ./user-preferences/.env.example
+
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
