--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -38,6 +38,7 @@ services:
       NODE_ENV: development
     volumes:
       - ./mailer:/usr/src/app
+      - ./shared:/usr/src/shared
 
 
   verification-token:
