--- a/shared/package.json
+++ b/shared/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^10.3.3",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/microservices": "^10.3.3"
   }
 }
