--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,6 +10,8 @@ services:
     environment:
       NODE_ENV: production
     env_file: ./api-gateway/.env.example
+    depends_on:
+      - rabbitmq
 
 
   auth:
