--- a/shared/package.json
+++ b/shared/package.json
@@ -11,5 +11,8 @@
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.2",
     "@nestjs/microservices": "^10.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.10"
   }
 }
