--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -9,7 +9,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./api-gateway/.env.example
+    env_file: ./api-gateway/.env
     depends_on:
       - rabbitmq
 
@@ -22,7 +22,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./auth/.env.example
+    env_file: ./auth/.env
 
 
   mailer:
@@ -33,7 +33,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./mailer/.env.example
+    env_file: ./mailer/.env
 
 
   verification-token:
@@ -44,7 +44,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./verification-token/.env.example
+    env_file: ./verification-token/.env
 
 
   feedback:
@@ -55,7 +55,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./feedback/.env.example
+    env_file: ./feedback/.env
 
 
   files:
@@ -77,7 +77,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./class-and-category/.env.example
+    env_file: ./class-and-category/.env
 
 
   tutor-apply-for-class:
@@ -88,7 +88,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./tutor-apply-for-class/.env.example
+    env_file: ./tutor-apply-for-class/.env
 
 
   student-favorite-tutor:
@@ -99,7 +99,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./student-favorite-tutor/.env.example
+    env_file: ./student-favorite-tutor/.env
 
 
   tutor-query:
@@ -110,7 +110,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./tutor-query/.env.example
+    env_file: ./tutor-query/.env
 
   address:
     image: asia-southeast1-docker.pkg.dev/ace-computer-422002-u9/tutorify-docker-repo/tutorify-be-address:prod
@@ -120,7 +120,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./address/.env.example
+    env_file: ./address/.env
 
   class-session:
     image: asia-southeast1-docker.pkg.dev/ace-computer-422002-u9/tutorify-docker-repo/tutorify-be-class-session:prod
@@ -130,7 +130,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./class-session/.env.example
+    env_file: ./class-session/.env
 
   report:
     image: asia-southeast1-docker.pkg.dev/ace-computer-422002-u9/tutorify-docker-repo/tutorify-be-report:prod
@@ -140,7 +140,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./report/.env.example
+    env_file: ./report/.env
 
   user-preferences:
     image: asia-southeast1-docker.pkg.dev/ace-computer-422002-u9/tutorify-docker-repo/tutorify-be-user-preferences:prod
@@ -150,7 +150,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./user-preferences/.env.example
+    env_file: ./user-preferences/.env
 
   notification:
     image: asia-southeast1-docker.pkg.dev/ace-computer-422002-u9/tutorify-docker-repo/tutorify-be-notification:prod
@@ -160,7 +160,7 @@ services:
       target: production
     environment:
       NODE_ENV: production
-    env_file: ./notification/.env.example
+    env_file: ./notification/.env
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
