--- a/.gitmodules
+++ b/.gitmodules
@@ -12,10 +12,10 @@
 	url = https://github.com/Lephat902/tutorify-be-verification-token.git
 [submodule "feedback"]
 	path = feedback
-	url = https://github.com/HungPham-Canh/tutorify-be-feedback.git
+	url = https://github.com/Lephat902/tutorify-be-feedback.git
 [submodule "files"]
 	path = files
-	url = https://github.com/HungPham-Canh/files
+	url = https://github.com/Lephat902/tutorify-be-files
 [submodule "class-and-category"]
 	path = class-and-category
 	url = https://github.com/Lephat902/tutorify-be-class-and-category
@@ -30,13 +30,13 @@
 	url = https://github.com/Lephat902/tutorify-be-tutor-query
 [submodule "address"]
 	path = address
-	url = https://github.com/HungPham-Canh/tutorify-be-address.git
+	url = https://github.com/Lephat902/tutorify-be-address.git
 [submodule "class-session"]
 	path = class-session
 	url = https://github.com/Lephat902/tutorify-be-class-session.git
 [submodule "report"]
 	path = report
-	url = https://github.com/HungPham-Canh/tutorify-be-report.git
+	url = https://github.com/Lephat902/tutorify-be-report.git
 [submodule "user-preferences"]
 	path = user-preferences
 	url = https://github.com/Lephat902/tutorify-be-user-preferences
